--- a/main.css
+++ b/main.css
@@ -30,13 +30,6 @@
   --hover: var(--purple);
 }
 
-@media print {
-  :root {
-    --background: #FFF;
-    --links: var(--foreground);
-  }
-}
-
 html {
   font-size: 11pt;
   font-family: Roboto, sans-serif;
@@ -47,6 +40,8 @@ html {
 body {
   margin: auto;
   width: 7.5in;
+  padding: 0.5in;
+  line-height: 1.5rem;
 }
 
 strong {
@@ -63,7 +58,7 @@ h1 {
 h2 {
   color: var(--strong);
   font-size: 1.5rem;
-  margin: 0;
+  margin: 1rem 0;
   position: relative;
 }
 
@@ -117,7 +112,7 @@ a:hover strong {
 }
 
 ul {
-  margin: 0.5rem 0;
+  margin: 0.5rem 0 1rem 0;
   list-style-type: square;
   padding: 0 0 0 1.5rem;
 }
@@ -169,42 +164,33 @@ time {
 }
 
 @media screen {
-  body {
-    line-height: 1.5rem;
-  }
-
-  ul {
-    margin: 0.5rem 0 1rem 0;
-  }
-
-  h2 {
-    margin: 1rem 0;
-  }
-
-  body {
-    padding: .5in;
-  }
-
   .print {
     display: none;
   }
 }
 
 @media print {
+  :root {
+    --background: #FFF;
+    --links: var(--foreground);
+  }
+
   body {
     line-height: normal;
+    padding: 0in;
+    height: 9in;
   }
 
   h2 {
     font-size: 1.2rem;
+    margin: 0;
   }
 
-  p, ul {
+  p {
     margin: 0.2rem 0;
   }
 
-  body {
-    padding: 0in;
-    height: 9in;
+  ul {
+    margin: 0.2rem 0;
   }
 }
