--- a/main.css
+++ b/main.css
@@ -251,13 +251,18 @@ time {
     height: 9in;
   }
 
+  h1 {
+    /* feels low, but it makes it look alright /shrug */
+    line-height: 1rem;
+  }
+
   h2 {
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     margin: 0;
   }
 
   div {
-    margin: 0.2rem 0;
+    margin: 0.4rem 0;
   }
 
   ul {
